trunk/plugins/abc/abcp-0.1a/abcplib/src/abcpkey.c
/* Generated by re2c 0.5 on Fri Dec 31 13:56:16 2004 */
#line 1 "abcpkey.re"

#include "abcp.h"


/*
  Key
  01234567890
  KETMabcdefg
  ||\\\_______ explicit accidentals (nNfFsS)
  |  \\_______ Mode (see table below)
  K   \_______ Tonic [A-G]  P (HP), p (Hp) Z (none)
    
  M Major          
  m Minor          
  X Mix            
  D Dor            
  P Phr            
  L Lyd            
  l Loc            
  I Ion            
  A Aeo
  E Explicit

Tonic use the following coding as notes:

n abcdefg 
f ijklmno
s qrstuvw
N ABCDEFG
F IJKLMNO
S QRSTUVW

Errors      

1= Missing Tonic
2= Unknown mode
3= 
4=
5=
6= Syntax error
        
 Clef:
 012345678901234567
 CENOTTLMMDNNnnSSss
 ||\\\ \\ \\   \________ subname length
 C  \\\ \\ \\___________ name length
     \\\ \\ \___________ stem direction  0100 ggss  00=auto; 11=none; 10=up; 01=down;
      \\\ \\____________ Middle (pitch and octave on the middle line [A-G] default B)
       \\\ \____________ Staff lines (0 .. 9)
        \\\_____________ Semitones transpose (-128 .. +127)
         \\_____________ Octave transpose 'O'=0
          \_____________ clef name + center line
                           40 none         (none)
                           4F percussion   (perc)
                           4F perc         (perc)
                           41 frenchviolin (treble1)
                           41 french       (treble1)
                           4A violin       (treble)
                           4A treble       (treble)
                           51 soprano      (alto1)
                           52 mezzosoprano (alto2)
                           5A alto         (alto)
                           54 tenor        (alto4)
                           55 baritone     (alto5)
                           6A bass         (bass)
                           65 subbass      (bass5)

                           71 doh1 (Gregorian)
                           72 doh2 
                           73 doh3
                           74 doh4
                           75 Fa1  (Gregorian)
                           76 Fa2
                           77 Fa3
                           78 Fa4
                           
                                        line
                           treble  0100 xxxx
                           alto    0101 xxxx
                           bass    0110 xxxx
                           doh     0111 0xxx
                           fa      0111 1xxx

If line is 0 the clef is invisible (i.e. "none" is "treble0").
if line is A (10) no line value has been specified

Staff lines
  The parser handles up to 9 staff lines numbered from 1
to 9, the position of the clef and/or the the "middle=" 
parameters determine the note on each line.

Stems
  
 0100 ggss  00=auto; 11=none; 10=up; 01=down;

Errors:
1= invalid note
2=
3=
4= Unrecognized token
5=
6=

*/


#line 148


#define getnum(x,s) do {char t; t=*s; x=0;\
                        if (t=='-' || t == '+') s++;\
                        while(isdigit(*s)) x=x*10+ (*s++ - '0');\
                        if (t=='-') x=-x;\
                       } while(0)
                       

#define v(x) (*v-'0')

static char *clef(char *pak, char *str,int off)
{
  int m,d;
  char *t; char c;
  int i;
  
  YYCTYPE *YYCURSOR,*YYLIMIT,*YYMARKER,*YYSTART,*YYEND;

  if (str==NULL || pak==NULL) return NULL;
  
  YYCURSOR=str;
  YYLIMIT=str;  while (*YYLIMIT) YYLIMIT++; 
  /*printf("clef: '%s'\n",YYCURSOR);*/
  
               /*012345678901234567*/
  /*setpack(pak,"CENOTTLMMDNNnnSSss");*/
  pak[0]='C';
  pak[1]='@';
  pak[9]='@';

  STATE(get_clef) {
  /* printf("\n---\n%s\n--\n",str); */
    skipspace(YYCURSOR);
    YYSTART=YYCURSOR;
    
    {
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy0;
yy1:	++YYCURSOR;
yy0:
	if((YYLIMIT - YYCURSOR) < 12) YYFILL(12);
	yych = *YYCURSOR;
	if(yych <= 'd'){
		if(yych <= 'D'){
			if(yych <= '+'){
				if(yych <= '\000')	goto yy20;
				if(yych <= '*')	goto yy22;
				goto yy16;
			} else {
				if(yych == '-')	goto yy17;
				if(yych <= 'C')	goto yy22;
				goto yy14;
			}
		} else {
			if(yych <= '`'){
				if(yych == 'F')	goto yy15;
				goto yy22;
			} else {
				if(yych <= 'a')	goto yy13;
				if(yych <= 'b')	goto yy12;
				if(yych >= 'd')	goto yy6;
				goto yy2;
			}
		}
	} else {
		if(yych <= 'o'){
			if(yych <= 'g'){
				if(yych <= 'e')	goto yy22;
				if(yych <= 'f')	goto yy7;
				goto yy19;
			} else {
				if(yych <= 'l')	goto yy22;
				if(yych <= 'm')	goto yy10;
				if(yych <= 'n')	goto yy4;
				goto yy18;
			}
		} else {
			if(yych <= 's'){
				if(yych <= 'p')	goto yy5;
				if(yych <= 'r')	goto yy22;
				goto yy9;
			} else {
				if(yych <= 't')	goto yy11;
				if(yych == 'v')	goto yy8;
				goto yy22;
			}
		}
	}
yy2:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 'l')	goto yy219;
	goto yy3;
yy3:
#line 292
	{ while (*YYCURSOR & (!isspace(*YYCURSOR))) YYCURSOR++;
                             setperr(pak,1);
                             GOTO(get_clef); }
yy4:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= 'l'){
		if(yych == 'a')	goto yy211;
		goto yy3;
	} else {
		if(yych <= 'm')	goto yy208;
		if(yych == 'o')	goto yy212;
		goto yy3;
	}
yy5:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 'e')	goto yy206;
	goto yy3;
yy6:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 'o')	goto yy201;
	if(yych == 'r')	goto yy202;
	goto yy3;
yy7:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 'a')	goto yy61;
	if(yych == 'r')	goto yy189;
	goto yy3;
yy8:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 'i')	goto yy183;
	goto yy3;
yy9:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= '<'){
		if(yych <= '\r'){
			if(yych <= '\b')	goto yy3;
			if(yych <= '\n')	goto yy143;
			if(yych <= '\f')	goto yy3;
			goto yy143;
		} else {
			if(yych <= ' '){
				if(yych <= '\037')	goto yy3;
				goto yy143;
			} else {
				if(yych <= '/')	goto yy3;
				if(yych <= '9')	goto yy147;
				goto yy3;
			}
		}
	} else {
		if(yych <= 'n'){
			if(yych <= 'g'){
				if(yych <= '=')	goto yy145;
				goto yy3;
			} else {
				if(yych <= 'h')	goto yy139;
				if(yych <= 'm')	goto yy3;
				goto yy140;
			}
		} else {
			if(yych <= 's'){
				if(yych <= 'o')	goto yy149;
				goto yy3;
			} else {
				if(yych <= 't')	goto yy142;
				if(yych <= 'u')	goto yy141;
				goto yy3;
			}
		}
	}
yy10:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= '='){
		if(yych <= '\r'){
			if(yych <= '\b')	goto yy3;
			if(yych <= '\n')	goto yy117;
			if(yych <= '\f')	goto yy3;
			goto yy117;
		} else {
			if(yych == ' ')	goto yy117;
			if(yych <= '<')	goto yy3;
			goto yy119;
		}
	} else {
		if(yych <= 'd'){
			if(yych <= '@')	goto yy3;
			if(yych <= 'G')	goto yy121;
			if(yych <= '`')	goto yy3;
			goto yy121;
		} else {
			if(yych <= 'g'){
				if(yych <= 'e')	goto yy124;
				goto yy121;
			} else {
				if(yych == 'i')	goto yy116;
				goto yy3;
			}
		}
	}
yy11:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= ','){
		if(yych <= '\r'){
			if(yych <= '\b')	goto yy3;
			if(yych <= '\n')	goto yy90;
			if(yych <= '\f')	goto yy3;
			goto yy90;
		} else {
			if(yych <= ' '){
				if(yych <= '\037')	goto yy3;
				goto yy90;
			} else {
				if(yych == '+')	goto yy94;
				goto yy3;
			}
		}
	} else {
		if(yych <= '='){
			if(yych <= '/'){
				if(yych <= '-')	goto yy94;
				goto yy3;
			} else {
				if(yych <= '9')	goto yy95;
				if(yych <= '<')	goto yy3;
				goto yy92;
			}
		} else {
			if(yych <= 'e'){
				if(yych <= 'd')	goto yy3;
				goto yy98;
			} else {
				if(yych == 'r')	goto yy89;
				goto yy3;
			}
		}
	}
yy12:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 'a')	goto yy76;
	goto yy3;
yy13:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 'l')	goto yy70;
	goto yy3;
yy14:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 'o')	goto yy65;
	goto yy3;
yy15:	yych = *++YYCURSOR;
	if(yych == 'a')	goto yy61;
	goto yy3;
yy16:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= '2'){
		if(yych <= '0')	goto yy3;
		if(yych <= '1')	goto yy55;
		goto yy56;
	} else {
		if(yych == '8')	goto yy53;
		goto yy3;
	}
yy17:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= '2'){
		if(yych <= '0')	goto yy3;
		if(yych <= '1')	goto yy46;
		goto yy45;
	} else {
		if(yych == '8')	goto yy47;
		goto yy3;
	}
yy18:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= '+'){
		if(yych <= '\r'){
			if(yych <= '\b')	goto yy3;
			if(yych <= '\n')	goto yy34;
			if(yych <= '\f')	goto yy3;
			goto yy34;
		} else {
			if(yych == ' ')	goto yy34;
			if(yych <= '*')	goto yy3;
			goto yy38;
		}
	} else {
		if(yych <= '9'){
			if(yych == '-')	goto yy38;
			if(yych <= '/')	goto yy3;
			goto yy39;
		} else {
			if(yych <= '='){
				if(yych <= '<')	goto yy3;
				goto yy36;
			} else {
				if(yych == 'c')	goto yy33;
				goto yy3;
			}
		}
	}
yy19:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 's')	goto yy23;
	goto yy3;
yy20:	yych = *++YYCURSOR;
	goto yy21;
yy21:
#line 291
	{ GOTO(done); }
yy22:	yych = *++YYCURSOR;
	goto yy3;
yy23:	yych = *++YYCURSOR;
	if(yych == 't')	goto yy25;
	goto yy24;
yy24:	YYCURSOR = YYMARKER;
	switch(yyaccept){
	case 3:	goto yy194;
	case 2:	goto yy128;
	case 1:	goto yy123;
	case 0:	goto yy3;
	}
yy25:	yych = *++YYCURSOR;
	if(yych != 'e')	goto yy24;
	goto yy26;
yy26:	yych = *++YYCURSOR;
	if(yych != 'm')	goto yy24;
	goto yy27;
yy27:	yych = *++YYCURSOR;
	if(yych == 's')	goto yy29;
	goto yy30;
yy28:
#line 278
	{ if (*YYCURSOR == '\'' || *YYCURSOR == '"') YYCURSOR++;
                             pak[9]= toupper(*YYCURSOR);
                             if ((pak[9] != 'U') && (pak[9] != 'D')) pak[9]=' ';
                             while (*YYCURSOR && !isspace(*YYCURSOR)) YYCURSOR++;
                             GOTO(get_clef);
                           }
yy29:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy30;
yy30:	if(yych <= '\r'){
		if(yych <= '\b')	goto yy28;
		if(yych <= '\n')	goto yy29;
		if(yych <= '\f')	goto yy28;
		goto yy29;
	} else {
		if(yych <= ' '){
			if(yych <= '\037')	goto yy28;
			goto yy29;
		} else {
			if(yych != '=')	goto yy28;
			goto yy31;
		}
	}
yy31:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy32;
yy32:	if(yych <= '\f'){
		if(yych <= '\b')	goto yy28;
		if(yych <= '\n')	goto yy31;
		goto yy28;
	} else {
		if(yych <= '\r')	goto yy31;
		if(yych == ' ')	goto yy31;
		goto yy28;
	}
yy33:	yych = *++YYCURSOR;
	if(yych == 't')	goto yy42;
	goto yy24;
yy34:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy35;
yy35:	if(yych <= '*'){
		if(yych <= '\f'){
			if(yych <= '\b')	goto yy24;
			if(yych <= '\n')	goto yy34;
			goto yy24;
		} else {
			if(yych <= '\r')	goto yy34;
			if(yych == ' ')	goto yy34;
			goto yy24;
		}
	} else {
		if(yych <= '/'){
			if(yych == ',')	goto yy24;
			if(yych <= '-')	goto yy38;
			goto yy24;
		} else {
			if(yych <= '9')	goto yy39;
			if(yych != '=')	goto yy24;
			goto yy36;
		}
	}
yy36:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy37;
yy37:	if(yych <= ' '){
		if(yych <= '\f'){
			if(yych <= '\b')	goto yy24;
			if(yych <= '\n')	goto yy36;
			goto yy24;
		} else {
			if(yych <= '\r')	goto yy36;
			if(yych <= '\037')	goto yy24;
			goto yy36;
		}
	} else {
		if(yych <= ','){
			if(yych != '+')	goto yy24;
			goto yy38;
		} else {
			if(yych <= '-')	goto yy38;
			if(yych <= '/')	goto yy24;
			if(yych <= '9')	goto yy39;
			goto yy24;
		}
	}
yy38:	yych = *++YYCURSOR;
	if(yych <= '/')	goto yy24;
	if(yych >= ':')	goto yy24;
	goto yy39;
yy39:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	goto yy40;
yy40:	if(yych <= '/')	goto yy41;
	if(yych <= '9')	goto yy39;
	goto yy41;
yy41:
#line 231
	{ d=1; m=0;
                             YYSTART=YYCURSOR;
                             while (isdigit(*(--YYSTART))) {
                               m += (*YYSTART - '0') * d;
                               d *= 10;
                             }
                             if (m>9) m=9;
                             if (*YYSTART == '-') m = -m;
                             pak[3] = 'O'+m;
                             GOTO(get_clef);
                           }
yy42:	yych = *++YYCURSOR;
	if(yych != 'a')	goto yy24;
	goto yy43;
yy43:	yych = *++YYCURSOR;
	if(yych != 'v')	goto yy24;
	goto yy44;
yy44:	yych = *++YYCURSOR;
	if(yych == 'e')	goto yy34;
	goto yy24;
yy45:	yych = *++YYCURSOR;
	if(yych == '2')	goto yy51;
	goto yy24;
yy46:	yych = *++YYCURSOR;
	if(yych == '5')	goto yy49;
	goto yy24;
yy47:	yych = *++YYCURSOR;
	goto yy48;
yy48:
#line 226
	{ pak[3] = 'O'-1; GOTO(get_clef); }
yy49:	yych = *++YYCURSOR;
	goto yy50;
yy50:
#line 227
	{ pak[3] = 'O'-2; GOTO(get_clef); }
yy51:	yych = *++YYCURSOR;
	goto yy52;
yy52:
#line 228
	{ pak[3] = 'O'-3; GOTO(get_clef); }
yy53:	yych = *++YYCURSOR;
	goto yy54;
yy54:
#line 225
	{ pak[3] = 'O'+1; GOTO(get_clef); }
yy55:	yych = *++YYCURSOR;
	if(yych == '5')	goto yy59;
	goto yy24;
yy56:	yych = *++YYCURSOR;
	if(yych != '2')	goto yy24;
	goto yy57;
yy57:	yych = *++YYCURSOR;
	goto yy58;
yy58:
#line 223
	{ pak[3] = 'O'+3; GOTO(get_clef); }
yy59:	yych = *++YYCURSOR;
	goto yy60;
yy60:
#line 224
